client/public/css/style.css
body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
  background-image: url(../images/bg.png);
}

.App {
  width: 60%;
  margin: auto;
}

.username {
  display: inline-block;
  float: right;
  margin-right: 10px;
}

.header {
  background-color: #3b8fb5;
  height: 40px;
  padding: 12px;
  padding-bottom: 40px;
  color: white;
  margin-bottom: 5px;
  border-radius: 15px;
}

.dashboard, .workout, .summary, .countdown, .loginPage, .signupPage{
  background-color: rgba(255, 255, 255, .5);
  border-radius: 15px;
  padding: 20px;
  margin-bottom: 20px;
  text-align: center;
}

.workout {
  padding-top: 40px;
  padding-bottom: 20px;
}

.workout img {
  max-width: 85%
}

.summary, .countdown {
  padding-bottom: 60px;
}

.historyHeader, .favoritesHeader {
  display: inline-block;
}

.favoritesHeader {
  float: right;
  cursor: pointer;
}

.history {
  background-color: rgba(211, 211, 211, .6);
  border-radius: 15px;
  padding: 15px;
  padding-top: 5px;
  padding-bottom: 30px;
  margin-bottom: 20px;
  margin-top: 50px;
}

.historyNotLoggedIn {
  font-style: italic;
}

.login {
  border-width: 2px;
  border-radius: 15px;
  border-color: black;
  border-style: solid;
  box-sizing: border-box;
  margin-bottom: 40px;
  width: 20%;
}

.signup {
  border-width: 2px;
  border-radius: 15px;
  border-color: black;
  border-style: solid;
  box-sizing: border-box;
  margin-bottom: 20px;
  width: 20%;
}

.pastWorkout {
  background-color: rgba(255, 255, 255, .8);
  border-radius: 10px;
  border-width: 1px;
  border-color: black;
  border-style: solid;
  margin-bottom: 5px;
  text-align: left;
  padding-left: 10px;
}

.blackButton {
  background-color: #000000;
  -webkit-border-radius: 8;
  -moz-border-radius: 8;
  border-radius: 8px;
  font-family: Arial;
  color: #ffffff;
  font-size: 14px;
  padding: 10px 20px;
  text-decoration: none;
  float: right;
  margin-top: 12px;
}

.blackButtons:hover {
  background-color: #386994;
  text-decoration: none;
  float: right;
}

.dateAndTime {
    font-weight: bold;
    color: #386994;
}

.startButton {
  box-shadow: 10px 10px 5px grey;
  width: 25%;
  height: 0;
  padding-bottom: 25%;
  border-radius: 50%;
  border: 5px solid #f5f5f5;
  overflow: hidden;
  background: #fff;
  box-shadow: 0 0 35px gray;
  margin: auto;
}

.startButton:hover {
  background-image: url(../images/pizzagif.gif);
}

.startButton img {
  display: block;
  width: 76%;
  padding: 12%;
  height: auto;
}


.warmupTitle, .workoutTitle, .cooldownTitle {
  color: gray;
  font-size: 30px;
  font-weight: bold;
  padding: 15px;
  padding-bottom: 12px;
  margin-right: 25px;
  border-top-right-radius: 10px;
  border-top-left-radius: 10px;
}

.activeTitle {
  color: black;
  background-color: rgba(211, 211, 211, .6);
}

.exerciseName {
  color: #3b8fb5;
  font-weight: bold;
  font-size: 35px;
}

.exerciseImage {
  box-shadow: 10px 10px 5px grey;
}

.exerciseDescription {
  background-color: rgba(211, 211, 211, .6);
  border-radius: 15px;
  padding: 45px 45px 20px 45px;

  margin-top: 10px;
}

.pizzaFavor {
  width: 40px;
  height: auto;
  cursor: pointer;
}

.countdownCircle {
  background-image: url(../images/pizzagif.gif);
  width: 25%;
  height: 0;
  padding-bottom: 25%;
  border-radius: 50%;
  border: 5px solid #f5f5f5;
  overflow: hidden;
  box-shadow: 0 0 35px gray;
  margin: auto;
  position: relative;

}

.countdownNumber {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-weight: bold;
  font-size: 8em;
  color: #000;
}

.timer {
  font-weight: bold;
  font-size: 40px;
  color: #000;
  display: inline-block;
 }

.timer:hover {
  background-image: url(../images/pizzagif.gif);
}


.summaryStats {
  width: 85%;
  margin: auto;
  background-color: rgba(255, 255, 255, .8);
  border-radius: 10px;
  border-width: 1px;
  border-color: black;
  border-style: solid;
  margin-top: 15px;
  margin-bottom: 10px;
  text-align: left;
  padding-left: 15px;
  padding-right: 15px;
  padding-bottom: 20px;
}

.summaryCongrats {
  font-weight: bold;
  font-size: 45px;
  color: #3b8fb5;
  padding-bottom: 15px;
  display: inline-block;
}

.congratulations:hover {
  background-image: url(../images/pizzagif.gif);
}

.congratulations:hover {
  background-image: url(../images/pizzagif.gif);
}

.summaryTitle {
  color: #3b8fb5;
}

.summaryQuote {
  font-style: italic;
  font-size: 35px;
  display: inline-block;
  padding: 15px;
  margin-top: 5px;
}

.alert {
  background: gray;
  color: white;
  padding: 5px;
}

.backToDashboardButton {
  background-color: #000000;
  -webkit-border-radius: 8;
  -moz-border-radius: 8;
  border-radius: 8px;
  font-family: Arial;
  color: #ffffff;
  font-size: 14px;
  padding: 10px 20px;
  text-decoration: none;
  display: inline-block;
  vertical-align: center;
}

.backToDashboardButton :hover {
  background-color: #386994;
  text-decoration: none;

}

.summaryExercisesCompleted {
  font-weight: bold;
  font-size: 30px;
  color: #000;
}

label{
  display: inline-block;
  float: left;
  clear: left;
  width: 150px;
  text-align: right;
  padding: 5px;
  margin: 10px 5px;
}

input[id=username], input[id=password], input[id=phonenumber] {
  display: inline-block;
  float: left;
  padding: 5px;
  margin: 10px 5px;
  width: 65%;
}

input[id=username]:focus, input[id=password]:focus, input[id=phonenumber]:focus {
    border: 2px solid #3b8fb5;
}

.hideButton {
  display: none;
}

input[type=submit] {
  display: block;
  background-color: #000000;
  -webkit-border-radius: 8;
  -moz-border-radius: 8;
  border-radius: 8px;
  font-family: Arial;
  color: #ffffff;
  font-size: 14px;
  padding: 10px 50px;
  vertical-align: middle;
  margin-bottom: 20px;
}

.musicButton {
  border: 2px solid #3b8fb5;
  border-radius: 20px;
  width: 23em;
  margin: auto;
  text-align: center;
  color: #3b8fb5;
  padding-top: 5px;
  padding-bottom: 5px;
  background-color: white;
  transition: background-color 0.4s ease;
  transition: color 0.4s ease;
}

.musicButton:hover, .exerciseAudioBtn:hover {
  background-color: #3b8fb5;
  color: white;
  cursor: pointer;
}

.exerciseAudioBtn {
  border: 2px solid #3b8fb5;
  border-radius: 20px;
  width: 12em;
  margin: auto;
  text-align: center;
  color: #3b8fb5;
  padding-top: 5px;
  padding-bottom: 5px;
  background-color: white;
  transition: background-color 0.4s ease;
  transition: color 0.4s ease;
  margin-top: 20px;
}

.deviceWarning {
  text-align: center;
}

.player {
  padding-top: 10px;
  display: inline-block;
  position: relative;
  margin-left: 20px;
  padding-bottom: 3px;
}

.devices {
  display: inline-block;
  position: relative;
  top: -25px;
  margin-left: 20px;
  text-align: center;
}

.devices * {
  font-family: sans-serif;
  text-align: center;
}

.currentDevice {
  margin-bottom: 10px;
}

.musicPlayer {
  position: relative;
  top: 40px;
  border: 2px solid #3b8fb5;
  border-radius: 20px;
  background-color: white;
  margin-left: 40px;
  margin-right: 40px;
}

